Fix spacing for /menu/edit_metadata

--- a/www/public/css/menu/menu.edit.metadata.less
+++ b/www/public/css/menu/menu.edit.metadata.less
@@ -175,8 +175,8 @@ div.edit {
                         border: 1px solid black;
 
                         label {
-                            display: inline-block;
-                            margin: 0.2em 0.25em;
+                            .display-inline-block();
+                            margin: 0.2em 0em;
                             font-size: 0.65em;
                         }
                     }
